[package]
name = "choko"
version = "0.1.0"
edition = "2021"
authors = ["piroz"]
license = "MIT"
description = "Rust serverless microframework for AWS Lambda, inspired by AWS Chalice"
repository = "https://github.com/velocitylabo/choko"
readme = "README.md"
keywords = ["aws", "lambda", "serverless", "framework"]
categories = ["web-programming::http-server", "asynchronous"]

[dependencies]
lambda_runtime = "1.0"
aws_lambda_events = { version = "1.0", default-features = false, features = ["apigw"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
serde = "1.0"
http = "1.0"
